# wikipron

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Hi-scrape.py  Hindi-scrape.ipynb  Ko-scrape.py  LICENSE.txt  MANIFEST.in.txt  README.md  data_split.py  g2p.py  iso_dict.json  kor_data.tsv  mypy.ini  pyproject.toml  requirements.txt  setup.py  test_g2p.py  test_wikipron.py  wikipron.py
.circleci/: config.yml
.github/: pull_request_template.md
.ipynb_checkpoints/: Hindi-scrape-checkpoint.ipynb  Ko-scrape-checkpoint.ipynb  Ko-scrape-final-checkpoint.ipynb
data/: README.md  languages_summary.tsv  list_phones.py  requirements.txt  tsv_summary.tsv
data/covering_grammar/: README.md
data/fra_lexique/: lexicon.tsv
data/frequencies/: README.md  grab_wortschatz_data.py  merge.py  wortschatz_languages.json
data/morphology/: README.md  ady.tsv  aze.tsv  bak.tsv  bel.tsv  bul.tsv  cat.tsv  dan.tsv  eng.tsv  fao.tsv  gal.tsv  get_unimorph_data.py  grab_unimorph_data.py  nld.tsv  unimorph_languages.json
deu/: scrape.py
eng/: lexicon-raw.tsv  scrape.py
fra/: lexicon-raw.tsv  scrape.py
g2p/: __init__.py  __main__.py  scrape.py
g2p.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
hin/: lexicon-raw.tsv  scrape.py
jpn/: README.md  scrape.py
kor/: scrape.py
languages/: fra_wik.sh  scrape  scrape.sh
scripts/: data_split.py  evaluate.py  lexicon.py
spa/: lexicon-raw.tsv  scrape.py
tests/: test_cli.py  test_config.py  test_extract.py  test_languagecodes.py  test_scrape.py  test_version.py
wikipron/: .config.py.swp  __init__.py  _version.py  cli.py  config.py  languagecodes.py  scrape.py  typing.py
(+2539 files in other folders)
